--- a/Monitor.html
+++ b/Monitor.html
@@ -154,8 +154,8 @@ async function getContent() {
 			}
 
 			for (var i in myObj.temps) {
-		console.log(i + " - " + myObj.temps.values[i])
-		console.log(i + " - " + myObj.temps.keys[i])
+		console.log(i + " - " + myObj.temps[i].temperatura.value)
+		console.log(i + " - " + myObj.temps[i].temperatura.keys)
 			}
 
 		console.log("tamanho: ", i)
