--- a/Monitor.html
+++ b/Monitor.html
@@ -150,12 +150,12 @@ async function getContent() {
 			}		 
 	
 			for (const [key, value] of Object.entries (myObj.temps)) {
-		console.log(`${key}: ${value}`);
+		console.log(`${temps.key}: ${temps.value}`);
 			}
 
 			for (var i in myObj.temps) {
-		console.log(i + " - " + myObj.temps[i].temperatura.value)
-		console.log(i + " - " + myObj.temps[i].temperatura.keys)
+		console.log(i + " - " + myObj.temps[i].temperatura)
+		console.log(i + " - " + myObj.temps[i].temperatura)
 			}
 
 		console.log("tamanho: ", i)
