--- a/Monitor.html
+++ b/Monitor.html
@@ -106,7 +106,7 @@
             <h3>
 	         	<table>
 					<thead>
-					<th>LOCAL </th><th >TEMPERATURAS </th><th>DIA </th><th> MES</th><th>ANO</th>
+					<th>ID</th><th>LOCAL </th><th>TEMPERATURAS </th><th>DIA </th><th> MES</th><th>ANO</th>
                 	</thead>
                     	<tbody id = "mytable">
 
@@ -260,12 +260,14 @@ async function list_temp(){
 		  for (const [key, value] of Object.entries (myObj.temps[k])) {
 
 			var tr = table.insertRow();
+			var td_id = tr.insertCell();
 			var td_local = tr.insertCell();
 			var td_temperatura = tr.insertCell();
 			var td_dia = tr.insertCell();
 			var td_mes = tr.insertCell();
 			var td_ano = tr.insertCell();
 
+			td_id.innerHTML = myObj.temps[k].id
 			td_local.innerHTML = myObj.temps[k].local
 			td_temperatura.innerHTML = myObj.temps[k].temperatura
 			td_dia.innerHTML = myObj.temps[k].dia
@@ -274,7 +276,7 @@ async function list_temp(){
 			
 	      console.log(`${key}: ${value}`);
 	  
-    	`<tr>  <td>${myObj.temps[k].local}</td> <td>${myObj.temps[k].temperatura}</td> <td>${myObj.temps[k].dia}</td> <td>${myObj.temps[k].mes}</td> <td>${myObj.temps[k].ano}</td> <tr>`
+    	`<tr>  <td>${myObj.temps[k].id}</td>  <td>${myObj.temps[k].local}</td> <td>${myObj.temps[k].temperatura}</td> <td>${myObj.temps[k].dia}</td> <td>${myObj.temps[k].mes}</td> <td>${myObj.temps[k].ano}</td> <tr>`
 
 	    //console.log(i + " - " + myObj.temps[i].temperatura)
     	//table.innerHTML += row;  
