--- a/Monitor.html
+++ b/Monitor.html
@@ -267,7 +267,7 @@ async function list_temp(){
 			var td_mes = tr.insertCell();
 			var td_ano = tr.insertCell();
 
-			td_id.innerHTML = myObj.temps[k].id
+			td_id.innerHTML = myObj.temps[k]._id
 			td_local.innerHTML = myObj.temps[k].local
 			td_temperatura.innerHTML = myObj.temps[k].temperatura
 			td_dia.innerHTML = myObj.temps[k].dia
@@ -276,7 +276,7 @@ async function list_temp(){
 			
 	      console.log(`${key}: ${value}`);
 	  
-    	`<tr>  <td>${myObj.temps[k].id}</td>  <td>${myObj.temps[k].local}</td> <td>${myObj.temps[k].temperatura}</td> <td>${myObj.temps[k].dia}</td> <td>${myObj.temps[k].mes}</td> <td>${myObj.temps[k].ano}</td> <tr>`
+    	`<tr>  <td>${myObj.temps[k]._id}</td>  <td>${myObj.temps[k].local}</td> <td>${myObj.temps[k].temperatura}</td> <td>${myObj.temps[k].dia}</td> <td>${myObj.temps[k].mes}</td> <td>${myObj.temps[k].ano}</td> <tr>`
 
 	    //console.log(i + " - " + myObj.temps[i].temperatura)
     	//table.innerHTML += row;  
