--- a/Grafico.html
+++ b/Grafico.html
@@ -64,7 +64,7 @@ google.charts.setOnLoadCallback(draw_table);
     <table>
         <div class = "thead"> 
         <thead>
-        <th>ID</th><th>LOCAL </th><th>TEMPERATURAS </th><th>DIA </th><th> MES</th><th>ANO</th>
+        <th>LOCAL </th><th>TEMPERATURAS </th><th>DIA </th><th> MES</th><th>ANO</th>
         </thead>
         </div>
             <tbody id = "mytable"></tbody>
