--- a/cad_user.html
+++ b/cad_user.html
@@ -20,8 +20,6 @@
 
 <div class = "cad">
 	
-	<input type="button" onclick=getContent() value="Show" />
-	
 	<form action="/user" method = "post">
         <h3>
 		<p><h2>Cadastrar Usuario</h2></p>
@@ -46,16 +44,19 @@
 	<form action="/user" method = "patch">
         <h3>
 		<p><h2>Altera</h2></p>
-
+		<label>Nome</label>
 		<input type="text" value= "" name = "nome" size="12" > <br>
+		<label>Email</label>
 		<input type="text" value= "" name = "email" size="12" > <br>
+		<label>Senha</label>
 		<input type="text" value= "" name = "senha" size="12" > 
 		<button type="submit">Alterar </button>
 	</form>
 
 	<form action="/user" method = "delete">
 			<p><h2>Deletar</h2></p>
-			<input type="text" value="ID" name = "id" size="12" > 
+			<label> ID </label>
+			<input type="text" value="" name = "id" size="20" > 
 			<button type="submit">Deletar</button>
 	</form>
 	</h3>
