--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <section class="Botoes">
     <div class="container">
         <div class="botao_home">
-		  <img src = "imagens/iot.png" width = "250" heigth = "150">
+		  <img src = "imagens/ED206.png" width = "200" heigth = "150">
         </div>
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
