--- a/autentica.html
+++ b/autentica.html
@@ -20,18 +20,21 @@
 		
 <div class = autenticacao >
 	
+<div class = box>
+
+
 <form action="/user" method = "get">
-	<p><h1>Cadastrar Usuario<h1></h1></p>
+	<p></p><label>Cadastrar Usuário</label></p>
 	<br>
-	<img NAME="user" src="imagens/user.png" ALT=""></a>
+	<img name="user" src="imagens/user.png" ALT=""></a>
 	<br>
 	<br>
-	<p></p><label>E-mail</label></p>
-	<input type="e-mail" value=""	name = "nome" size="12" >
+	
+	<input type="e-mail"  placeholder="E-mail"	name = "nome" size="12" >
 	<br> 
 	<br>
-    <p><label>Password</label></p>
-	<input type="password" value="" name = "sobrenome" size="12" > 
+   
+	<input type="password"  placeholder = "Password" name = "password" size="12" > 
     <br>   <br>
 
     <p><button type="submit"> Login </button></p>
@@ -41,7 +44,7 @@
 
 <button onclick = "window.location.href = 'cad_user.html'" >Submit</button>
 <br>
-
+</div>
 </div>
 </body>
 <script>
