--- a/autentica.html
+++ b/autentica.html
@@ -42,7 +42,7 @@
 		
 </form>
 
-<button onclick = "window.location.href = 'cad_user.html'" >Submit</button>
+<button onclick = "window.location.href = 'cad_user.html'" >Cadastre-se</button>
 <br>
 </div>
 </div>
