--- a/Grafico.html
+++ b/Grafico.html
@@ -58,28 +58,17 @@ google.charts.setOnLoadCallback(draw_table);
     </div>
 </section>
 
-<section class="table">
-    <div class="_dados">
-        <h3>
+<div class="table">
     <table>
         <div class = "thead"> 
         <thead>
-        <th><h1>LOCAL</h1> </th><th><h1>TEMPERATURAS</h1> </th><th><h1>DIA</h1> </th><th><h1> MES</h1></th><th><h1>ANO</h1></th>
+            <tr><th>LOCAL </th><th>TEMPERATURAS </th><th>DIA</h1> <th> MES</th><th>ANO</th></tr>
         </thead>
         </div>
             <tbody id = "mytable"></tbody>
             <tfoot> </tfoot>
-     </table>
-    </h3>
-   </div>
-</section>
-
-</table>
-
-            </h3>
-        </div>
+     </table>   
     </div>
-</section>
 
 </body>
 </html>
