--- a/Grafico.html
+++ b/Grafico.html
@@ -30,7 +30,6 @@ google.charts.setOnLoadCallback(draw_table);
 </div>  
 
 <section class="botãochart">
-    <div class="container1">
      <div class="botão_chart">
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Dia()">
@@ -42,20 +41,17 @@ google.charts.setOnLoadCallback(draw_table);
         </form>
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Ano()">
-            <p>Ano</p>
+            <label>Ano</label>
         </form>
      </div>
-    </div>
 </section>
 
 <section class="chart">
-     <div class="container2">
         <div class="charts">
             <div id='graph_dia'></div>
             <div id='graph_mes'></div>
             <div id='graph_ano'></div>
         </div>
-    </div>
 </section>
 
 <div class="table">
