--- a/autentica.html
+++ b/autentica.html
@@ -22,28 +22,17 @@
 	
 <div class = box>
 
-
 <form action="/user" method = "get">
-	<p></p><label>Cadastrar Usuário</label></p>
-	<br>
-	<img name="user" src="imagens/user.png" ALT=""></a>
-	<br>
-	<br>
-	
-	<input type="e-mail"  placeholder="E-mail"	name = "nome" size="12" >
-	<br> 
-	<br>
-   
-	<input type="password"  placeholder = "Password" name = "password" size="12" > 
-    <br>   <br>
+	<p></p><label>Cadastrar Usuário</label></p>	<br>
 
-    <p><button type="submit"> Login </button></p>
-    <br>
-		
+	<img name="user" src="imagens/user.png" ALT=""></a><br>	<br>
+	
+	<input type="e-mail"  placeholder="E-mail"	name = "nome" size="12" ><br><br>
+	<input type="password"  placeholder = "Password" name = "password" size="12" > <br>   <br>
+    <p><button type="submit"> Login </button></p>    <br>
 </form>
 
-<button onclick = "window.location.href = 'cad_user.html'" >Cadastre-se</button>
-<br>
+<button onclick = "window.location.href = 'cad_user.html'" >Cadastre-se</button><br>
 </div>
 </div>
 </body>
