--- a/cad_user.html
+++ b/cad_user.html
@@ -22,9 +22,12 @@
 	<div class = "box_cad">
 	<form action="/user" method = "post">
 		<label>Cadastrar Usuario</label><br>
-		<input type="text" placeholder="Nome"	name = "nome" size="12" > <br>
-		<input type="text" placeholder="E-mail" name = "email" size="12" > <br>
-		<input type="text" placeholder="Senha" name = "senha" size="12" > <br>
+		<input type="text" placeholder="Nome"	name = "nome" size="20" > <br>
+		<input type="text" placeholder="E-mail" name = "email" size="20" > <br>
+		<input type="text" placeholder="Senha" name = "senha" size="20" > <br><br>
+		
+		<input type="checkbox" name = "agreement" id="agreement" >
+		<label for="agreement">Eu li e aceito os <a href= "#" >termos de uso</a></label><br><br>
 		<button type="submit"> Cadastrar </button>
         </form>
        
@@ -34,21 +37,21 @@
 	<div class = "box_control">
 		<form action="/user" method = "get">
 		<label>Consultar</label><br>
-			<input type="text" name = "list" size="12" > 	<br>
-			<button type="submit">Listar</button>
+			<input type="text" name = "list" size="20" > 	<br>
+			<button type="submit" siz="20">Listar</button>
 		</form>	
 	
 	<form action="/user" method = "patch">
 
-		<label>Altera</label><br>
-		<input type="text"  placeholder="Nome" name="nome" size="12" > <br>
-		<input type="text"  placeholder="E-mail" name="email" size="12" > <br>
-		<input type="text"  placeholder="Senha" name="senha" size="12" > <br>
+		<br><label>Altera</label><br>
+		<input type="text"  placeholder="Nome" name="nome" size="20" > <br>
+		<input type="text"  placeholder="E-mail" name="email" size="20" > <br>
+		<input type="text"  placeholder="Senha" name="senha" size="20" > <br>
 		<button type="submit">Alterar </button>
 	</form>
 
 	<form action="/user" method = "delete">
-			<label>Deletar</label><br>
+		<br><label>Deletar</label><br>
 			<input type="text" placeholder="Id"  name = "id" size="20" > 
 			<button type="submit">Deletar</button>
 	</form>
