--- a/Monitor.html
+++ b/Monitor.html
@@ -66,7 +66,7 @@
 
 <form action="/temps" method = "get">
 	<table>
-	<tr><th colspan = 4>Log Temperatura dia</th></tr>
+	<tr><th colspan = 4>Temperatura dia</th></tr>
 	<td><h2>Local: </h2></td>
 	<td><h2>Temperatura: </h2></td>
 	<td><h2>Dia: </h2></td>
@@ -84,7 +84,6 @@
 	<tr><th colspan =2>Consultar Temperaturas</th></tr>
 	<tr>
 	<td><h2><input type="button" onclick=list_temp() value="LISTAR" />
-	<td><h2><button type="submit">Listar</button></h2></td>
 	</tr>
 </table>
 </form>	
@@ -94,7 +93,7 @@
 	<table>
 	<tr><th colspan = 2>DELETAR</th></tr>
 	<tr>
-	<td><input type="text" value=" " name = "id" size="32" > </td>
+	<td><input type="text" id=" id" name = "id" size="32" > </td>
 	<td><button type="submit">Deletar</button></td>
 	</tr>
 	</table>
