--- a/autentica.html
+++ b/autentica.html
@@ -16,20 +16,18 @@
 	</form>
 </div>
 
-
-		
 <div class = autenticacao >
 	
 <div class = box>
 
-<form action="/user" method = "get">
+<form action="/login" method = "post">
 	<p></p><label>Cadastrar Usuário</label></p>	<br>
 
 	<img name="user" src="imagens/user.png" ALT=""></a><br>	<br>
 	
-	<input type="e-mail"  placeholder="E-mail"	name = "nome" size="12" ><br><br>
-	<input type="password"  placeholder = "Password" name = "password" size="12" > <br>   <br>
-    <p><button type="submit"> Login </button></p>    <br>
+	<input type="nome"  placeholder="Usuario"	name = "nome" size="12" ><br><br>
+	<input type="password"  placeholder = "Senha" name = "senha0" size="12" > <br>  <br>
+    <button type="submit"> Login </button>  <br> <br>
 </form>
 
 <button onclick = "window.location.href = 'cad_user.html'" >Cadastre-se</button><br>
