--- a/cad_user.html
+++ b/cad_user.html
@@ -21,7 +21,7 @@
 <div class = "cad">
 	<div class = "box_cad">
 	<form action="/cadastrar" method = "post">
-		<label>Cadastrar Usuario</label><br>
+		<p><label>Cadastrar Usuario</label></p><br>
 		<input type="text" placeholder="Nome"	name = "nome" size="20" > <br>
 		<input type="text" placeholder="E-mail" name = "email" size="20" > <br>
 		<input type="text" placeholder="Senha" name = "senha0" size="20" > <br><br>
