--- a/autentica.html
+++ b/autentica.html
@@ -21,7 +21,7 @@
 <div class = box>
 
 <form action="/login" method = "post">
-	<p></p><label>Cadastrar Usuário</label></p>	<br>
+	<p></p><label>Login</label></p>	<br>
 
 	<img name="user" src="imagens/user.png" ALT=""></a><br>	<br>
 	
