--- a/Grafico.html
+++ b/Grafico.html
@@ -32,11 +32,11 @@ google.charts.setOnLoadCallback(draw_table);
      <div class="botão_chart">
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Dia()">
-            <p>Dia</p>
+            <label>Dia</label>
         </form>
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Mes()">
-            <p>Mês</p>
+            <label>Mês</label>
         </form>
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Ano()">
