--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <section class="Botoes">
     <div class="container">
         <div class="botao_home">
-		  <img src = "imagens/blue/logo.png" width = "200" heigth = "150">
+		  <a><img src = "imagens/blue/Logo.png" ></a>
+		  <a><img src = "imagens/blue/logo_toi.png" ></a>
         </div>
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
