--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <section class="Botoes">
     <div class="container">
         <div class="botao_home">
-		  <a><img src = "imagens/blue/Logo.png" ></a>
+		  <a><img src = "imagens/blue/logo.png" ></a> 
+
 		  <a><img src = "imagens/blue/logo_toi.png" ></a>
         </div>
 		<div class="home_btn">
@@ -17,6 +18,7 @@
                 <a  href="autentica.html">
 			    <img NAME="bar_04" src="imagens/blue/gear_btn.png"  ALT=""></a>
 			</form>
+			<a><img src = "imagens/blue/fio azul.png" ></a>
 		</div>
 	</div>
 </section>
